@@ -34,7 +34,8 @@
  </stability>
  <license uri="http://www.horde.org/licenses/bsd">BSD-2-Clause</license>
  <notes>
-*
+* [mjr] Fix some minor issues with crawling bookmarks.
+* [mjr] Show recently used tags on-demand (Bug #11712).
  </notes>
  <contents>
   <dir baseinstalldir="/" name="/">
@@ -612,7 +613,8 @@
    <date>2013-07-08</date>
    <license uri="http://www.horde.org/licenses/bsd">BSD-2-Clause</license>
    <notes>
-*
+* [mjr] Fix some minor issues with crawling bookmarks.
+* [mjr] Show recently used tags on-demand (Bug #11712).
    </notes>
   </release>
  </changelog>
