@@ -2,6 +2,8 @@
 v1.0.3-git
 ----------
 
+[mjr] Fix some minor issues with crawling bookmarks.
+[mjr] Show recently used tags on-demand (Bug #11712).
 
 ------
 v1.0.2
